# language-tutor

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  config-template.yaml  ct  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: main_language-tutor-api.yml
scripts/: generate_and_add_flashcards_for_article.py
src/tutor/: cli.py  llm_flashcards.py
src/tutor/card_styling/css/: cantonese_front.css
src/tutor/commands/: setup_anki.py
src/tutor/llm/: prompts.py
src/tutor/utils/: anki.py  config.py  logging.py
tests/llm/: test_models.py
tests/utils/: test_anki.py
tutor/: anki.py  cli.py  cli_global_state.py  language_processing.py  llm_flashcards.py
tutor/card_styling/css/: chinese_front.css  common.css  english_front.css
tutor/card_styling/templates/: chinese_front_back.html  english_front_back.html  english_front_front.html
tutor/card_styling/templates/cantonese/: chinese_front_back.html  english_front_back.html  english_front_front.html
tutor/card_styling/templates/mandarin/: chinese_front_back.html
tutor/commands/: config.py  fix_cards.py  generate_flashcard_from_word.py  generate_flashcards_from_article.py  generate_flashcards_from_chatgpt.py  generate_topics.py  list_lesser_known_cards.py  regenerate_flashcard.py  run_web.py  setup_anki.py  update_card_styling.py
tutor/llm/: models.py  prompts.py
tutor/utils/: anki.py  azure.py  chinese.py  config.py  logging.py
tutor/web/: app.py
tutor/web/static/: app.js  index.html
(+4 files in other folders)
