[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-tutor"
version = "0.1.0"
description = "A tool for learning Chinese with flashcards and related words"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
